Ejercicio 14 - Continent hecho exitosamente
Metodos importantes:
values() -> Me retorna un iterable con todos los enumerativos en orden
de ordial()

valueOf(...) -> Me retorna la instancia del enumerativo que le pasemos
como parametro. Hay dos value of, podriamos preguntar la diferencia pero
en la documentacion deberia estar